fix dialog: fix dialog scrollable scrollbar position

--- a/modules/dialog/scss/_dialog.scss
+++ b/modules/dialog/scss/_dialog.scss
@@ -73,6 +73,7 @@ $dialog-margin: $base-spacing-unit * 4;
 
     .dialog__scrollable {
         @include position(absolute, null 0 null 0);
+        z-index: 1;
         overflow-x: hidden;
         overflow-y: auto;
     }
